<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">FlorisBoard</string>

    <string name="key__phone_pause" comment="Label for the Pause key in the telephone keyboard layout">Pause</string>
    <string name="key__phone_wait" comment="Label for the Wait key in the telephone keyboard layout">Wait</string>

    <!-- One-handed strings -->

...
    <!-- Extension strings -->
    <string name="ext__home__title">Addons &amp; Extensions</string>
    <string name="ext__list__ext_theme">Theme extensions</string>
    <string name="ext__list__ext_keyboard">Keyboard extensions</string>
    <string name="ext__list__ext_languagepack">Language pack extensions</string>
    <string name="ext__meta__authors">Authors</string>
    <string name="ext__meta__components_theme">Bundled themes</string>
    <string name="ext__meta__components_language_pack">Bundled language packs</string>
    <string name="ext__meta__components_none_found">This extension archive does not contain any bundled components.</string>
    <string name="ext__meta__description">Description</string>
    <string name="ext__meta__homepage">Homepage</string>
    <string name="ext__meta__id">ID</string>
    <string name="ext__meta__issue_tracker">Issue tracker</string>
...
    <!-- Action strings -->
    <string name="action__add">Add</string>
    <string name="action__apply">Apply</string>
    <string name="action__back">Back</string>
    <string name="action__back_up">Back up</string>
    <string name="action__cancel">Cancel</string>
    <string name="action__create">Create</string>
    <string name="action__close">Close</string>
    <string name="action__default">Default</string>
    <string name="action__delete">Delete</string>
    <string name="action__delete_confirm_title">Confirm delete</string>
    <string name="action__delete_confirm_message">Are you sure you want to delete \"{name}\"? This action can not be undone once executed.</string>
    <string name="action__reset">Reset</string>
...
    <string name="action__export">Export</string>
    <string name="action__import">Import</string>
    <string name="action__import_file">Import file</string>
    <string name="action__no">No</string>
    <string name="action__ok">OK</string>
    <string name="action__restore">Restore</string>
    <string name="action__save">Save</string>
    <string name="action__select_file">Select file</string>
    <string name="action__select_files">Select files</string>
    <string name="action__yes">Yes</string>

    <!-- Error strings (generic) -->
    <string name="error__title">Error</string>
...
